fix(a11y): dropdown menu item hover color contrast in default and light themes

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -35,7 +35,7 @@ $o-header-nav-link-padding: 15px !default;
 // Dropdown menus
 $o-header-dropdown-menu-bg: $o-header-gray-70 !default;
 $o-header-dropdown-menu-border-color: $o-header-gray-70 !default;
-$o-header-dropdown-menu-hover-bg: $o-header-gray-40 !default;
+$o-header-dropdown-menu-hover-bg: $o-header-gray-60 !default;
 
 
 /// Responsive breakpoints
@@ -71,4 +71,4 @@ $o-header-nav-link-active-bg-light: $o-header-gray-10 !default;
 $o-header-dropdown-menu-bg-light: $o-header-gray-10 !default;
 $o-header-dropdown-menu-border-light: $o-header-dropdown-menu-bg-light !default;
 $o-header-dropdown-menu-hover-link-color-light: #ffffff !default;
-$o-header-dropdown-menu-hover-bg-light: darken($o-header-dropdown-menu-bg-light, 10%) !default;
+$o-header-dropdown-menu-hover-bg-light: $o-header-gray-60 !default;
